# microservice-rust-test

./: docker-compose.yml  user-service-claim0-persistentvolumeclaim.yaml  user-service-claim1-persistentvolumeclaim.yaml  user-service-deployment.yaml  user-service-service.yaml
domain/: Cargo.toml
domain/src/core/api/: api_error.rs  api_result.rs  mod.rs
logging_service/: Cargo.toml  Dockerfile
logging_service/migrations/2020-01-21-002159_create_log/: down.sql  up.sql
logging_service/src/: main.rs  schema.rs
logging_service/src/api/: mod.rs
logging_service/src/api/v1/: mod.rs
logging_service/src/api/v1/logs/: get.rs  mod.rs  post.rs
logging_service/src/models/: log.rs
logging_service/src/service/v1/logs/: create_log.rs  mod.rs
user_service/: Cargo.toml  Dockerfile
user_service/src/: main.rs
user_service/src/api/v1/: mod.rs
user_service/src/api/v1/auth/: login.rs  logout.rs  mod.rs
