[package]
name = "domain"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
chrono = { version = "0.4.10", features = ["serde"] }
actix-web = "2.0.0"
futures = "0.3.1"

[lib]
name = "domain"
path = "src/lib.rs"
