[package]
name = "logging_service"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
actix-web = "2.0.0"
actix-rt = "1.0"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
chrono = { version = "0.4.10", features = ["serde"] }
failure = "0.1.6"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }

[[bin]]
name = "logging_service"
path = "src/main.rs"
